--- a/SwiftyFramework.xcodeproj/xcshareddata/xcschemes/Debug.xcscheme
+++ b/SwiftyFramework.xcodeproj/xcshareddata/xcschemes/Debug.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "23BCC9CA24205F9900F9EC79"
-               BuildableName = "SwiftyFramework(Release).app"
+               BuildableName = "SwiftyFramework.app"
                BlueprintName = "SwiftyFramework"
                ReferencedContainer = "container:SwiftyFramework.xcodeproj">
             </BuildableReference>
@@ -45,7 +45,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "23BCC9CA24205F9900F9EC79"
-            BuildableName = "SwiftyFramework(Release).app"
+            BuildableName = "SwiftyFramework.app"
             BlueprintName = "SwiftyFramework"
             ReferencedContainer = "container:SwiftyFramework.xcodeproj">
          </BuildableReference>
@@ -62,7 +62,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "23BCC9CA24205F9900F9EC79"
-            BuildableName = "SwiftyFramework(Release).app"
+            BuildableName = "SwiftyFramework.app"
             BlueprintName = "SwiftyFramework"
             ReferencedContainer = "container:SwiftyFramework.xcodeproj">
          </BuildableReference>
@@ -72,7 +72,7 @@
       buildConfiguration = "Debug">
    </AnalyzeAction>
    <ArchiveAction
-      buildConfiguration = "Debug"
+      buildConfiguration = "Release"
       revealArchiveInOrganizer = "YES">
    </ArchiveAction>
 </Scheme>
