--- a/SwiftyFramework.xcodeproj/xcshareddata/xcschemes/Product.xcscheme
+++ b/SwiftyFramework.xcodeproj/xcshareddata/xcschemes/Product.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "23BCC9CA24205F9900F9EC79"
-               BuildableName = "SwiftyFramework(Release).app"
+               BuildableName = "SwiftyFramework.app"
                BlueprintName = "SwiftyFramework"
                ReferencedContainer = "container:SwiftyFramework.xcodeproj">
             </BuildableReference>
@@ -31,7 +31,7 @@
       </Testables>
    </TestAction>
    <LaunchAction
-      buildConfiguration = "Debug"
+      buildConfiguration = "Product"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
@@ -45,7 +45,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "23BCC9CA24205F9900F9EC79"
-            BuildableName = "SwiftyFramework(Release).app"
+            BuildableName = "SwiftyFramework.app"
             BlueprintName = "SwiftyFramework"
             ReferencedContainer = "container:SwiftyFramework.xcodeproj">
          </BuildableReference>
@@ -62,7 +62,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "23BCC9CA24205F9900F9EC79"
-            BuildableName = "SwiftyFramework(Release).app"
+            BuildableName = "SwiftyFramework.app"
             BlueprintName = "SwiftyFramework"
             ReferencedContainer = "container:SwiftyFramework.xcodeproj">
          </BuildableReference>
