--- a/SwiftyFramework/Resources/Config/Debug.xcconfig
+++ b/SwiftyFramework/Resources/Config/Debug.xcconfig
@@ -10,6 +10,7 @@
 // https://help.apple.com/xcode/#/dev745c5c974
 
 #include "Common.xcconfig"
+#include "Pods/Target Support Files/Pods-SwiftyFramework/Pods-SwiftyFramework.debug.xcconfig"
 
 BUNDLE_DISPLAY_NAME = SwiftyFramework(Debug)
 
