--- a/SwiftyFramework/Resources/Config/Product.xcconfig
+++ b/SwiftyFramework/Resources/Config/Product.xcconfig
@@ -9,6 +9,10 @@
 // Configuration settings file format documentation can be found at:
 // https://help.apple.com/xcode/#/dev745c5c974
 
+
+#include "Common.xcconfig"
+#include "Pods/Target Support Files/Pods-SwiftyFramework/Pods-SwiftyFramework.Product.xcconfig"
+
 BUNDLE_DISPLAY_NAME = SwiftyFramework(Product)
 
 
