--- a/SwiftyFramework/Resources/Config/Product.xcconfig
+++ b/SwiftyFramework/Resources/Config/Product.xcconfig
@@ -11,7 +11,7 @@
 
 
 #include "Common.xcconfig"
-#include "Pods/Target Support Files/Pods-SwiftyFramework/Pods-SwiftyFramework.Product.xcconfig"
+#include "Pods/Target Support Files/Pods-SwiftyFramework/Pods-SwiftyFramework.product.xcconfig"
 
 BUNDLE_DISPLAY_NAME = SwiftyFramework(Product)
 
