--- a/SwiftyFramework/Resources/Config/Debug.xcconfig
+++ b/SwiftyFramework/Resources/Config/Debug.xcconfig
@@ -1,13 +1,7 @@
 //
-//  Debug.xcconfig
-//  SwiftyFramework
-//
-//  Created by BANYAN on 2020/3/19.
-//  Copyright © 2020 BANYAN. All rights reserved.
-//
-
 // Configuration settings file format documentation can be found at:
 // https://help.apple.com/xcode/#/dev745c5c974
+
 
 #include "Common.xcconfig"
 #include "Pods/Target Support Files/Pods-SwiftyFramework/Pods-SwiftyFramework.debug.xcconfig"
@@ -17,6 +11,8 @@ BUNDLE_DISPLAY_NAME = SwiftyFramework(Debug)
 /// Bundle Identifier
 BUNDLE_IDENTIFIER = com.Better.SwiftyFramework.debug
 
-
 /// APP Icon
 APP_ICON = AppIconDebug
+
+/// API
+APP_BASE_URL = http:\/\/app.swifty.debug.cn
