--- a/SwiftyFramework/Resources/Config/Release.xcconfig
+++ b/SwiftyFramework/Resources/Config/Release.xcconfig
@@ -1,11 +1,4 @@
 //
-//  Release.xcconfig
-//  SwiftyFramework
-//
-//  Created by BANYAN on 2020/3/19.
-//  Copyright © 2020 BANYAN. All rights reserved.
-//
-
 // Configuration settings file format documentation can be found at:
 // https://help.apple.com/xcode/#/dev745c5c974
 
@@ -18,6 +11,8 @@ BUNDLE_DISPLAY_NAME = SwiftyFramework(Release)
 /// Bundle Identifier
 BUNDLE_IDENTIFIER = com.Better.SwiftyFramework
 
-
 /// APP Icon
 APP_ICON = AppIconRelease
+
+/// API
+APP_BASE_URL = "http://app.swifty.release.cn"
