--- a/SwiftyFramework/Resources/Info.plist
+++ b/SwiftyFramework/Resources/Info.plist
@@ -11,7 +11,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleShortVersionString</key>
-	<string>$(BUILD_VERSION)</string>
+	<string>$(APP_VERSION)</string>
 	<key>CFBundleDisplayName</key>
 	<string>$(BUNDLE_DISPLAY_NAME)</string>
 	<key>CFBundleExecutable</key>
